--- a/style.css
+++ b/style.css
@@ -34,10 +34,38 @@
   padding: 0;
   margin: 0;
   font-family: "font-6";
-  background-color: rgb(16, 16, 16, 1);
+  background-color: rgba(32,32,32,1);
   color: white;
-  /* box-sizing: border-box; */
 }
+
+.banniere {
+  background-color: rgb(75, 218, 43);
+  font-weight: 800;
+  padding: 5px;
+  text-align: center;
+}
+
+
+
+ul {
+  display: flex;
+  background-color:(32,32,32,1);
+}
+
+li {
+  padding: 10px 10px;
+  font-weight: 800;
+  list-style-type: none;
+  background-color:(32,32,32,1);
+}
+
+
+.imageHaut {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
 
 h2 {
   font-size: 2.5rem;
@@ -79,24 +107,36 @@ h2 {
 
 
 summary {
+  font-size: 0.8rem;
   border: 1px solid white;
-  border-radius: 3px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  list-style-type: none;
+  margin: 3px 0px;
+  padding bottom: 5px;
+  background-color:rgba(16,16,16,1)
 }
+
+
+/* summary:target {
+  border-top: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  border-bottom: none;
+  border-radius: 4px 4px 0px 0px;
+  -webkit-border-radius: 4px 4px 0px 0px;
+  -moz-border-radius: 4px 4px 0px 0px;
+  -ms-border-radius: 4px 4px 0px 0px;
+  -o-border-radius: 4px 4px 0px 0px;
+  color: aqua;
+} */
 
 a {
   color: rgb(112, 208, 56, 1);
 }
-
-/* .container {
-  width: 100%;
-  height: 80%;
-  display: flex;
-  justify-content: space-between
-} */
 
 .container {
   display: flex;
@@ -104,19 +144,42 @@ a {
 }
 
 .commande {
-  width: 50%;
-  padding: 3px;
+  width: 40%;
+  padding: 0px 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 
+.commande a {
+  background-color: white;
+  text-decoration: none;
+  color: black;
+}
+
+.commande a:hover {
+  background-color: greenyellow;
+}
+
+.quantite {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 15px;
+  border: 1px solid white;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+
 .acheterMaintenant {
+  width: auto;
   background-color: white;
   color: black;
   border-radius: 20px;
   border: 2px solid greenyellow;
-  padding: 5px 15px;
+  padding: 2px 15px;
   font-size: 1.2rem;
   font-weight: 800;
   text-align: center;
@@ -125,6 +188,11 @@ a {
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   text-decoration: none;
+}
+
+.acheterMaintenant:hover {
+  background-color: greenyellow;
+  border: 2px solid white;
 }
 
 .bottomArticle {
@@ -136,16 +204,24 @@ h3 {
   font-size: 2rem;
 }
 
-/* .commande {
-  padding: 0px 10px;
-} */
-
 p {
   font-size: 0.8rem;
 }
 
+.detail {
+  background-color:  rgba(32,32,32,1);
+  border: 1px solid rgb(175, 130, 130);
+  border-radius: 3px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+}
 
-button {
+
+.tailles {
   width: 45px;
   height: 45px;
   margin: 2px;
@@ -158,10 +234,17 @@ button {
   -o-border-radius: 10px;
   font-size: 0.7rem;
   font-weight: 700;
+} 
+
+svg {
+  width: 15px;
+  margin-left: 10px;
+  margin-right: 5px;
+  background-color:  rgba(16,16,16,1);
 }
 
-summary {
-  list-style-type: none;
+.arrow {
+  background-color:  rgba(32,32,32,1);
 }
 
 .carousel {
